Arreglo y comprobaciones de la UI y de IMAGEN y VIDEO